# HiLS-Attention

./: .gitignore  README.md  launch_dist.sh  pyproject.toml  requirements.txt  train_dist.sh
code_exp/: inspect_ckpt_keys.py  run_mix_dataset.py  run_sft_tokenizer.py  test_block_m_overlap.py  test_insert_lmk.py  verify_freeze_pattern.py
configs/baselines/: full_attn_tiny.yaml
configs/dash_attention/: config_dash_attn_345M.json
configs/deepseek/: deepseek_v3_dense.json
configs/flash_hsa/: config_hsa_8KA2K_HoPE_345M.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_loralmkq.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_compactlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_compressedlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wlmkq.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wlmkq_compactlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wlmkq_compressedlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_compactlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim128_1B.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim128_compressedlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_chunkpool.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_compactlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_compressedlmkk.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_compressedlmkk_theta10000000_256K.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_share_qc.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_theta10000000_256K.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_priorq_wloralmkq_loradim64_theta10000_256K.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_wlmkq.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_wlmkq_compact.json  config_hsa_8KA2K_HoPE_345M_lmk_bias_wloralmkq_loradim64.json  config_hsa_8KA2K_HoPE_345M_priorq_compresslmkk.json  config_hsa_8KA2K_NoPE_345M.json  config_hsa_8KA2K_NoPE_345M_priorq.json  config_hsa_8KA2K_NoPE_345M_priorq_wloralmkq_loradim64.json  config_hsa_8KA2K_NoPE_345M_priorq_wolmkq.json  config_hsa_8KA2K_NoPE_345M_wloralmkq_loradim64.json  config_hsa_8KA2K_RoPE_345M.json  config_hsa_8KA2K_RoPE_345M_LMK.json  config_hsa_8KA2K_RoPE_345M_priorq.json  config_hsa_8KA2K_RoPE_345M_priorq_wloralmkq_loradim64.json  config_hsa_8KA2K_RoPE_345M_priorq_wloralmkq_loradim64_compactlmkk.json  config_hsa_8KA2K_RoPE_345M_priorq_wloralmkq_loradim64_dyrope.json  (+3 more)
data/: __init__.py  chat_template.py  data_collator.py  data_transform.py  lazy_dataset.py  mix_dataset.py
eval/: debug_lmk_logits.py  eval_longbench2_cloze.py  eval_longbench2_direct.py  eval_longbench2_hf.py  eval_longbench_v1.py  eval_longbench_v1_sglang.py  eval_opencompass.py  eval_opencompass_olmo.py  eval_opencompass_sglang.py  eval_ppl.py  eval_ppl_dist.py  eval_ppl_hf.py  eval_ppl_hf_chunkprefill.py  eval_ruler.py  eval_ruler_hf.py  eval_ruler_hf_dist.py  rescore_evalplus.py  stat_longbench_v1_length.py
models/: __init__.py
ops/: chunk_attn_pool_tilelang.py  exact_chunk_log_z_tilelang.py  flex_attn_tilelang.py  hils_fwd_bwd_head.py  hsa_fwd_bwd_head_dense.py  hsa_fwd_bwd_single_tilelang.py  hsa_fwd_bwd_triton.py  hsa_triton.py  rms_norm_with_softplus.py  rope_tilelang_fp32.py  topk_head.py  topk_head_softmax.py
preprocess/: build_olmo3_datasets.py  build_olmo3_datasets_tx.py  build_olmo3_datasets_weighted.py
tasks/: pretrain.py  pretrain_with_ruler.py  replay.py  sft.py  sft_with_lmk.py  train_with_ruler.py
unittests/: bench_rms_norm_with_softplus.py  conftest.py  test_alibi_slopes_to_scores.py  test_chunk.sh  test_chunk_attn_pool_tilelang.py  test_generate_olmo.py  test_grad_accumulation.py  test_hsa_intra_chunk_alibi.py  test_legacy_compatibility.py  test_liger_rope.py  test_lmk_q_proj.py  test_lmk_utils.py  test_mix_dataset.py  test_rms_norm_with_softplus.py  test_rmsnorm_backends.py  test_rmsnorm_pope_consistency.py  test_train_inference_consistency.py  test_varlen_sliding_window.py
utils/: arguments.py  convert_basemodel_to_flashhsa.py  convert_basemodel_to_hils.py  convert_basemodel_to_hsa.py  convert_dcp_to_hf_ckpt.py  hils_cache_utils.py  hsa_cache_utils.py  landmark_utils.py  merge_checkpoints.py  misc.py  strip_ckpt_keys.py  training_utils.py
(+209 files in other folders)
