[project]
name = "hils-attention"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.14.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "apache-tvm-ffi==0.1.7",
    "attrs==25.3.0",
    "blobfile==3.0.0",
    "certifi==2025.8.3",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "datasets==2.21.0",
    "diffusers==0.31.0",
    "dill==0.3.8",
    "distlib==0.4.0",
    "einops==0.8.1",
    "expecttest==0.3.0",
    "filelock==3.19.1",
    "flash-attn",
    "flash-attn-3",
    "fonttools==4.63.0",
    "frozenlist==1.7.0",
    "fsspec==2024.6.1",
    "fuzzywuzzy==0.18.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "hf-transfer==0.1.9",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.1",
    "identify==2.6.14",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "levenshtein==0.27.3",
    "liger-kernel==0.6.2",
    "lxml==6.0.2",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mbridge==0.15.1",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "nodeenv==1.9.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.1",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "pre-commit==4.3.0",
    "propcache==0.3.2",
    "protobuf==6.33.2",
    "psutil==7.1.0",
    "pyarrow==21.0.0",
    "pycryptodomex==3.23.0",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyparsing==3.3.2",
    "pytest==7.4.4",
    "python-dateutil==2.9.0.post0",
    "python-levenshtein==0.27.3",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.5",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rouge==1.0.1",
    "ruff==0.13.2",
    "safetensors==0.6.2",
    "sentry-sdk==2.39.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sympy==1.14.0",
    "tiktoken==0.11.0",
    "tilelang @ git+https://github.com/tile-ai/tilelang.git@53ea96c6d8c02d0f4b51f3ce87236b0b2739ba6f",
    "timm==1.0.16",
    "tokenizers==0.22.1",
    "torch",
    "torch-c-dlpack-ext==0.1.4",
    "torch-einops-utils==0.0.32",
    "torchaudio==2.8.0+cu128",
    "torchdata==0.11.0",
    "torchvision==0.23.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "veomni @ git+https://github.com/ByteDance-Seed/VeOmni.git@441e1b2483921e9cfe56c8d97541a23cb4b290a8",
    "virtualenv==20.34.0",
    "wandb==0.22.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "z3-solver==4.15.4.0",
    "zipp==3.23.0",
]

[tool.uv]
override-dependencies = [
    "transformers==4.57.3",
    "protobuf==6.33.2",
    "typing-extensions==4.15.0",
    "torch==2.8.0",
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp311-cp311-linux_x86_64.whl" }
flash-attn-3 = { url = "https://github.com/windreamer/flash-attention3-wheels/releases/download/2025.09.28/flash_attn_3-3.0.0b1%2B20250928.cu128torch280cxx11abitrue.5059fd-cp39-abi3-linux_x86_64.whl" }
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.8.0%2Bcu128-cp311-cp311-manylinux_2_28_x86_64.whl" }
